# ComfyUI-LLaVA-OneVision

./: README.md  nodes.py  pyproject.toml  requirements.txt
llava/: conversation.py  utils.py
llava/model/: apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py
llava/model/language_model/: llava_llama.py  llava_mpt.py  llava_qwen.py  llava_qwen_moe.py
llava/model/multimodal_encoder/: clip_encoder.py  hf_vision.py  open_clip_encoder.py  siglip_encoder.py
llava/model/multimodal_encoder/dev_eva_clip/: eva_vit.py
llava/model/multimodal_encoder/eva_clip/: eva_clip_encoder.py  eva_vit.py
